Fix blue link highlight on mobile

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -54,6 +54,9 @@
   * {
     @apply border-border;
   }
+  html {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
   html,
   body {
     @apply h-full;
